# Ivf_Voc_monitoring

./: .cproject  .project  ARCHITECTURE.md  CMakeLists.txt  IVF_EMS_Architecture_v2.docx  README.md  WORKLOG.md  sdkconfig  sdkconfig.defaults
.claude/: settings.json
assets/: iconamoon_menu-burger-horizontal-bold.c
main/: .cproject  CMakeLists.txt  app_main.c  idf_component.yml
main/board/: board.h
main/data/: alarm_manager.c  alarm_manager.h  calendar_util.c  calendar_util.h  config_manager.c  config_manager.h  history_manager.c  history_manager.h
main/display/: display_driver.c  display_driver.h  display_power.c  display_power.h
main/lvgl_port/: lv_conf.h  lvgl_port.c  lvgl_port.h
main/sensors/: sensor_backend.h  sensor_backend_hw.c  sensor_backend_sim.c  sensor_manager.c  sensor_manager.h
main/sensors/sht41/: sht41.c  sht41.h
main/touch/: touch_driver.c  touch_driver.h
main/ui/: nav_drawer.c  nav_drawer.h  ui.c  ui.h
main/ui/assets/: assets.c  assets.h  calendar_icon.c  chart_average_icon.c  chart_icon.c  chart_maximum_icon.c  chart_minimum_icon.c  dashboard_icon.c  data_log_icon.c  datalog_icon.c  date_range_icon.c  humidity.c  menu_burger_horizontal_bold.c  sd_Card.c  setting_icon.c  shield_icon.c  temperature.c  wifi_icon.c
main/ui/components/card/: card.c  card.h
main/ui/components/circular_gauge/: circular_gauge.c  circular_gauge.h
main/ui/components/header/: header.c  header.h
main/ui/components/icon_button/: icon_button.c  icon_button.h
main/ui/components/navigation_drawer/: navigation_drawer.c  navigation_drawer.h
main/ui/components/status_badge/: status_badge.c  status_badge.h
main/ui/components/voc_gauge/: voc_gauge.c  voc_gauge.h
main/ui/screens/: screen_chart.c  screen_chart.h  screen_dashboard.c  screen_dashboard.h  screen_logs.c  screen_logs.h  screen_settings.c  screen_settings.h  screen_splash.c  screen_splash.h
